fixed an issue that was happening on Firefox, with the cards not being displayed using the correct width.

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,5 +1,6 @@
 .restaurants__card {
   max-width: 335px;
+  width: 100%;
   border-radius: 15px;
   a {
     text-decoration: none;
